--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "homepage": "https://gurolizard.neocities.org",
   "devDependencies": {
     "@11ty/eleventy": "^3.0.0"
+  },
+  "scripts": {
+    "build": "npx @11ty/eleventy"
   }
 }
